<resources>
    <string name="app_name">Pool-Calculator</string>
    <string name="title_home">Home</string>
    <string name="title_help">Help</string>
    <string name="title_about_us">About us</string>
    <string name="title_imprint">Imprint</string>
    <string name="title_rectangle">Rectangle</string>
    <string name="title_circle">Circle</string>
    <string name="enter_dimensions">Enter dimensions</string>
    <string name="length_in_meters">Length in meters</string>
    <string name="radius_in_meters">Radius in meters</string>
    <string name="width_in_meters">Width in meters</string>
    <string name="height_in_meters">Height in meters</string>
    <string name="function_of_the_app">Function of the App:</string>
    <string name="choose_your_pool_shape">Choose your pool shape</string>
    <string name="welcome_to">Welcome to</string>
    <string name="calculate_pool_water">Calculate pool water</string>
    <string name="rectangle">Rectangle</string>
    <string name="spherical">Spherical</string>
    <string name="dimension_input_for_rectangular_pool">Dimension input for rectangular pool</string>
    <string name="dimension_input_for_spherical_pool">Dimension input for spherical pool</string>
    <string name="result_pool_water">Your pool needs the following amount of water (in cbm):</string>
    <string name="height">Height:</string>
    <string name="width">Width:</string>
    <string name="length">Length:</string>
    <string name="radius">Radius:</string>
    <string name="wateramount_in_cbm_rectangle">Wateramount in cbm = Length * Width * Height</string>
    <string name="wateramount_in_cbm_circle">Wateramount in cbm = &#960; * r^2 * Height</string>
    <string name="rectangular_pool">Rectangular pool</string>
    <string name="spherical_pool">Spherical pool</string>
    <string name="calculate">Calculate</string>
    <string name="imprint_head">Imprint of the HMNJ Software Solutions GmbH</string>
    <string name="imprint_company">HMNJ Software Solutions GmbH</string>
    <string name="imprint_street">Erna-Scheffler-Straße 1A</string>
    <string name="imprint_city">51103 Cologne-Kalk</string>
    <string name="imprint_country">Germany</string>
    <string name="imprint_people_head">Represented by: </string>
    <string name="imprint_hinteman">Hendrik Jan Hinteman</string>
    <string name="imprint_schneider">Marcel Maurice Schneider</string>\
    <string name="imprint_strehlau">Nils Strehlau</string>
    <string name="imprint_budde">Jan-Hendrik Budde</string>
    <string name="imprint_tax_head">Sales tax identification number to section 27a of the sales tax act</string>
    <string name="imprint_sales_tax_identification_number">DE2934128056</string>
    <string name="imprint_contact">Contact</string>
    <string name="imprint_phone">Phone: +49221 81843</string>
    <string name="imprint_fax">Fax: +49221 81833</string>
    <string name="imprint_email">Email: <a href="support@hmnj.de">support@hmnj.de</a></string>
    <string name="imprint_web">Web: <a href="http://www.hmnj-softwaresolutions.de/e">www.hmnj-softwaresolutions.de/</a></string>
    <string name="aboutUs_welcome">Welcome to HMNJ Software Solutions GmbH - your partner for customized app development from Cologne. Our company may seem compact with a dedicated team of 4 professionals, but it is our size that allows us to respond flexibly and purposefully to the individual needs of our clients.</string>
    <string name="aboutUs_philosophy">\nOur philosophy is simple: We live and breathe software solutions. Here at HMNJ, we rely on passion, dedication and a deep commitment to innovation and sustainability. We firmly believe that the key to outstanding digital products lies in the combination of advanced technical know-how and a thoughtful approach to sustainability. From our headquarters in the heart of Cologne, we pursue these goals with a tireless commitment to perfection.</string>
    <string name="aboutUs_body">\nIntegration and versatility are at the heart of our work. With a small but fine team we cover all relevant areas - from management to sales, costing, support to programming. Everyone in our team brings unique skills that allow us to look at complex projects from different perspectives and develop solutions that are not only technically sophisticated, but also pragmatic and customer oriented.</string>
    <string name="aboutUs_contextHeader">\nOur business areas include:</string>
    <string name="aboutUs_context1">\n- Management: Responsible for the coordination of our experts and the strategic orientation.</string>
    <string name="aboutUs_context2">- Sales: Develops efficient sales channels to place our solutions optimally.</string>
    <string name="aboutUs_context3">- Calculation: Provides transparent and comprehensible cost calculations for our customers.</string>
    <string name="aboutUs_context4">- Support: Provides first-class customer support through multiple channels, including a hotline.</string>
    <string name="aboutUs_context5">- Programming: Our core, responsible for the implementation of innovative app solutions.</string>
    <string name="aboutUs_values">\nWe stand for innovation, integrity, customer focus and team spirit. These values guide us in everything we do and enable us to not only meet but exceed the expectations of our customers.</string>
    <string name="aboutUs_final">\nAt HMNJ Software Solutions GmbH, we combine technical expertise with creative vision to actively shape the digital future. Explore our software solutions where ingenuity meets reliability - always innovative, always reliable and always one step ahead.</string>
    <string name="help_end">Our goal is to answer all inquiries within one hour.</string>
    <string name="help_email_address">- E-mail address: <a href="support@hmnj.de">support@hmnj.de</a></string>
    <string name="help_email_body">Send us an e-mail with your request at any time to:</string>
    <string name="help_email_headline">\nE-mail</string>
    <string name="help_phone_addon">Outside these times, you are welcome to leave a message on our mailbox and we will call you back as soon as possible.</string>
    <string name="help_phone_number">- Telephone number: +49221 81843</string>
    <string name="help_phone_body">Our customer service is available from Monday to Friday, 8:00 a.m. to 4:00 p.m., at the following telephone number:</string>
    <string name="help_phone_headline">Telephone</string>
    <string name="help_contact">\n#Contact our support</string>
    <string name="help_body">We are here to help you! If you have any questions, encounter any problems or need help, please do not hesitate to contact us. Our customer service team is happy to assist you with advice and assistance.</string>
    <string name="help_headline">Help &amp; Support</string>
</resources>