<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pool_rechner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_rectangle"
            app:destination="@id/navigation_rectangle" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_circle"
            app:destination="@id/navigation_circle" />
    </fragment>

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.example.pool_rechner.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pool_rechner.ui.dashboard.DashboardFragment"
        android:label="@string/title_about_us"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_imprint"
        android:name="com.example.pool_rechner.ui.imprint.ImprintFragment"
        android:label="@string/title_imprint"
        tools:layout="@layout/fragment_imprint" />

    <fragment
        android:id="@+id/navigation_rectangle"
        android:name="com.example.pool_rechner.ui.rectangle.RectangleFragment"
        android:label="@string/title_rectangle"
        tools:layout="@layout/fragment_rectangle" />

    <fragment
        android:id="@+id/navigation_circle"
        android:name="com.example.pool_rechner.ui.circle.CircleFragment"
        android:label="@string/title_circle"
        tools:layout="@layout/fragment_circle" />
</navigation>